# pygentrification

./: LICENSE.txt  README  README.md  api_calls.py  api_request_4_3.py  bates_freeman_indices.py  batesfreeman.py  ding_detailed.py  ding_func.py  ding_index.py  ding_index_.py  folium_func_batesfree.py  folium_func_ding.py  harmonize_tracts_func.py  harmonize_tracts_func_final.py  indices_constants.py  pyproject.toml  python_census_api_script.py  python_census_api_script_3_28.py  python_census_api_script_4_11.py  python_census_api_script_gus8066.py  setup.py
Ding/: ding_detailed.py
folium/: folium_func_batesfree.py  folium_func_ding.py
gentrification-indices/: api_calls.py  bates_freeman_indices.py  ding_index.py  folium_funcs.py  harmonization.py  indices_constants.py
src/gentrification-indices/: api_calls.py  ding_index.py
src/pygentrification/: api_calls.py  bates_freeman_indices.py  folium_funcs.py  harmonization.py
src/pygentrification.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
