[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygentrification"
version = "0.0.3"
authors = [
  { name="Winn Costantini", email="wc555@drexel.edu"}, {name = "Adam Thompson", email = "adam.thompson0001@temple.edu"}, {name = "Josh Scrabeck", email = "joshua.scrabeck@temple.edu"},
]
description = "A python package for calculating and visualizing gentrification indices from published academic research"
readme = "README.md"
requires-python = ">=3.9, !=3.10"
keywords = ["gentrification"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
dependencies = ["requests",
"pandas",
"geopandas",
"tobler",
"numpy == 1.22.4",
"folium", 
"branca"]

[project.urls]
"Homepage" = "https://github.com/joshscrabeck/pygentrification"




